--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             <button class="show-button" onclick="showImage('image3')">C</button>
         </div>
     </div>
-    <script src="./index.js" defer></script>
+    <script src="./index.js"></script>
   </body>
 </html>
