--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>In Class 2</title>
   </head>
   <body>
@@ -28,6 +28,6 @@
             <button class="show-button" onclick="showImage('image3')">C</button>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
