--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/index.js" defer></script>
     <title>In Class 2</title>
   </head>
   <body>
@@ -28,6 +29,5 @@
             <button class="show-button" onclick="showImage('image3')">C</button>
         </div>
     </div>
-    <script src="./js/index.js"></script>
   </body>
 </html>
