--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <div class="container">
         <div class="a-image">
             <img src="./img/css-letter-a.png" alt="image a" class="image" id="aimage">
-            <button class="hide-button" onclick="hideImage('aimage')">Hide Image</button>
+            <button class="hide-button" onclick="hideImage('aimage')">Hide Display</button>
             <button class="show-button" onclick="showImage('aimage')">A</button>
         </div>
         <div class="bimage">
             <img src="./img/css-letter-b.png" alt="image b" class="image" id="bimage">
-            <button class="hide-button" onclick="hideImage('bimage')">Hide Image</button>
+            <button class="hide-button" onclick="hideImage('bimage')">Hide Display</button>
             <button class="show-button" onclick="showImage('bimage')">B</button>
         </div>
         <div class="cimage">
             <img src="./img/css-letter-c.png" alt="image c" class="image" id="image3">
-            <button class="hide-button" onclick="hideImage('image3')">Hide Image</button>
+            <button class="hide-button" onclick="hideImage('image3')">Hide Display</button>
             <button class="show-button" onclick="showImage('image3')">C</button>
         </div>
     </div>
